# codecademy-mealwise

./: .gitignore  README.md  gunicorn-config.py  mealwise-theme.css  pyproject.toml  requirements.txt  theme-colors.css
mealwise/: db.sqlite3  demodata.json  manage.py
mealwise/inventory/: admin.py  forms.py  models.py  views.py
mealwise/inventory/migrations/: 0001_initial.py  0002_alter_reciperequirement_unique_together.py  0003_auto_20220106_1738.py  0004_alter_ingredient_unit.py
mealwise/inventory/static/: mealwise-theme.css
mealwise/inventory/templates/: base.html  full_modal.html
mealwise/inventory/templates/htmx/: create_ing_from_menu_item_modal.html  create_ingredient_modal.html  create_menu_item_modal.html  create_recipe_req.html  delete_ingredient.html  delete_ingredient_modal.html  delete_menu_item_modal.html  delete_recipe_req.html  delete_table_row.html  htmx_bootstrap_modal_test.html  ingredient.html  login_form_errors.html  login_modal.html  purchase_item_modal.html  recipe_requirement.html  signup_modal.html  update_ingredient.html  update_recipe_req.html
mealwise/inventory/templates/inventory/: create_ingredient.html  create_menu_item.html  create_purchase.html  create_recipe_req.html  delete_ingredient.html  delete_menu_item.html  delete_purchase.html  delete_recipe_req.html  home.html  ingredients.html  menu-with-cards.html  menu.html  purchases.html  recipe_requirements.html  report.html  update_ingredient.html  update_menu_item.html  update_purchase.html  update_recipe_req.html
mealwise/mealwise/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
