[tool.poetry]
name = "codecademy-mealwise"
version = "0.1.0"
description = "A web app to help a restaurant keep track of its inventory throughout the day. Capstone project for Codecademy Django course."
authors = ["James Walters <33947683+iamjameswalters@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
django-htmx = "^1.6.0"
django-bootstrap5 = "^21.2"
Pillow = "^9.0.0"
django-admin-interface = "^0.18.4"
bokeh = "^2.4.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
